# clean

./: .gitignore  LICENSE  Main-Movie.py  Main.py  README.md  debug_parsing.py  pyproject.toml
cleanMedia/: clean-tv.command  com.nulleffect.clean-log-rotate.plist  com.nulleffect.clean-movie-watcher.plist  com.nulleffect.clean-tv-watcher.plist  rotate-logs.sh  transcode.command  watch-movie.sh  watch-tv.sh
scripts/: clean-movie.command  clean-tv.command  cleant-tv.commmand  com.nulleffect.clean-movie-watcher.plist  com.nulleffect.clean-tv-watcher.plist  install-watcher.sh  large_files.txt  watch-movie.sh  watch-tv.sh
src/: .gitignore  Main.py  MovieMain.py  TranscodeMain.py  __init__.py  audio_tracks.py  config.py  qbittorrent.py  tvmaze.py  utils.py
src/service/: __init__.py  base.py  clean_movie_service.py  clean_service.py  transcode_service.py
src/utils/: snapshot.py
test/: clean_tv_test.py
test/test_data/Billions/Season 02/: BILLIONS - S02 E06 - Indian Four (720p AMZN WebRip).srt
test/test_data/Misc/: randomfile.txt
tests/: __init__.py  conftest.py  test_audio_track_defaults.py  test_clean_movie_service.py  test_clean_service.py  test_main.py  test_parse_show_name.py  test_qbittorrent.py  test_tvmaze_collapse_renumber.py  test_utils_same_content.py
